fix (desktop/Screen.css) : Screen Overflow fixed

--- a/src/app/shared/root.css
+++ b/src/app/shared/root.css
@@ -5,9 +5,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Ranchers&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
-body{
+html, body{
   height: 100%;
   width: 100%;
+  scrollbar-width: none;
 }
 
 :root {
